[package]
name = "converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
byond = { git = "https://github.com/PJB3005/byond-rs", package = "byond" }
toml = "0.5.9"
pretty_assertions = "1.2.1"
